--- a/curve-fi/src/assets/styles/page-body.css
+++ b/curve-fi/src/assets/styles/page-body.css
@@ -37,17 +37,6 @@
   text-align: center;
 }
 
-/* .title:before {
-  content: "";
-  border: 2px solid white;
-  top: 4px;
-  left: 4px;
-  right: 4px;
-  bottom: 4px;
-  z-index: -1;
-  position: absolute;
-} */
-
 #swap-container {
   inset: 2% 5%;
   background: blueviolet;
@@ -70,11 +59,6 @@
   -webkit-line-clamp: 1;
 }
 
-.swap-content {
-  width: auto;
-  height: auto;
-}
-
 #swap-row {
   display: flex;
   flex-flow: row;
@@ -82,9 +66,9 @@
   margin: 24px 0 24px 0px;
 }
 
-#from-amount::before {
-  content: "Max: ";
-  border: 2px solid red;
+#from-amount,
+#to-amount {
+  max-height: 30px;
 }
 
 #from-currency-container {
@@ -102,41 +86,35 @@
   content: "From: ";
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 132px;
-  z-index: 1;
-}
-
-.dropdown-content a {
-  display: block;
-  padding: 12px 16px;
-  text-decoration: none;
-}
-
-.dropdown-content > ul {
-  overflow: scroll;
-  max-height: 264px;
-  padding-inline-start: 0px;
+.options {
   list-style-type: none;
+  display: none;
+  padding-inline-start: 0px;
+}
+
+.show {
+  display: block;
+  overflow: scroll;
+  max-height: 210px;
   margin-block-start: 0px;
 }
 
-#from-currency-container:hover .dropdown-content {
+ul.options {
+  border: 1px solid hotpink;
+  display: none;
+  list-style: none;
+  padding: 4px;
+  margin-top: -4px;
+}
+
+ul.show {
   display: block;
 }
 
-.currency-drop-down-btn > div > span {
-  margin-right: 32px;
-}
-
-#from-amount {
-  background: blue;
-  z-index: 1;
-}
-
-#to-amount {
-  background: #505070;
-  z-index: 1;
+ul.options li:active,
+ul.options li:focus,
+ul.options li:hover,
+ul.options li[aria-selected="true"] {
+  background: pink;
+  cursor: pointer;
 }
